@@ -212,6 +212,16 @@ Use MusicBrainzIdentifier to search music (mainly for artists)\&. Default is Tru
 Consider using these metadata as it enhances a lot artist/album/tracks identification\&. Use Picard to tag your file:
 \m[blue]\fB\%https://picard.musicbrainz.org/\fR\m[]\&.
 .RE
+.PP
+\fBrepeat_disable_queue=\fR\fItrue\fR
+.RS 4
+Prevent disabling queuing in repeat play mode\&.
+.RE
+.PP
+\fBsingle_disable_queue=\fR\fItrue\fR
+.RS 4
+Prevent disabling queuing in single play mode\&.
+.RE
 .SS "Crop section"
 .PP
 crop plugin\*(Aqs configuration:
