@@ -106,6 +106,18 @@ queue_length = 2
 # description: Use of MusicBrainzIdentifier tag
 musicbrainzid = True
 
+## REPEAT_DISABLE_QUEUE
+# type: boolean
+# default: True
+# description: Prevent repeat play mode to disable queuing
+repeat_disable_queue = True
+
+## SINGLE_DISABLE_QUEUE
+# type: boolean
+# default: True
+# description: Prevent single play mode to disable queuing
+single_disable_queue  = True
+
 ######################### PLUGINS #####################################
 
 [crop]
